--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ relay:
     - master
   environment:
     RELAY_WARMER: "dur=$(expr $(od -An -N2 -tu2 /dev/urandom) % 10 + 5) ; echo my task is running for $dur seconds ; sleep $dur"
+    # RELAY_WARMER: "dur=5 ; echo my task is running for $dur seconds ; sleep $dur"
     RELAY_METRIC: "relay_mesos.for_demo.num_active_mesos_tasks"
     # RELAY_TARGET: "relay_mesos.for_demo.target_value"
     RELAY_TARGET: "oscillating_setpoint"
