--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,3 +77,4 @@ relay:
     RELAY_MESOS_MASTER_STATE_FOR_DEMO: "http://master:5050/master/state.json"
     RELAY_MESOS_VOLUMES: "/tmp/:/mounted_testfile:ro"
     RELAY_MESOS_DOCKER_IMAGE: "ubuntu:14.04"
+    RELAY_MESOS_FORCE_PULL_IMAGE: true
