--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,3 +78,4 @@ relay:
     RELAY_MESOS_VOLUMES: "/tmp/:/mounted_testfile:ro"
     RELAY_MESOS_DOCKER_IMAGE: "ubuntu:14.04"
     RELAY_MESOS_FORCE_PULL_IMAGE: true
+    RELAY_MESOS_URIS: "/etc/profile"
