--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ relay:
     - web
     - master
   environment:
-    RELAY_WARMER: "dur=$(expr $(od -An -N2 -tu2 /dev/urandom) % 10 + 5) ; echo my task is running for $dur seconds ; ls / ; sleep $dur ; ls /mounted_testfile"
+    RELAY_WARMER: "dur=$(expr $(od -An -N2 -tu2 /dev/urandom) % 10 + 5) ; echo my task is running for $dur seconds.  ; echo This env var is set by Mesos if --mesos_environment is defined:  DISTRIB_ID=$DISTRIB_ID ; ls / ; sleep $dur ; ls /mounted_testfile"
     # RELAY_WARMER: "dur=5 ; echo my task is running for $dur seconds ; sleep $dur"
     RELAY_METRIC: "relay_mesos.for_demo.num_active_mesos_tasks"
     # RELAY_TARGET: "relay_mesos.for_demo.target_value"
@@ -76,6 +76,7 @@ relay:
     RELAY_DELAY: "0.1"
     RELAY_MESOS_MASTER_STATE_FOR_DEMO: "http://master:5050/master/state.json"
     RELAY_MESOS_VOLUMES: "/tmp/:/mounted_testfile:ro"
+    RELAY_MESOS_ENVIRONMENT: "/etc/lsb-release"
     RELAY_MESOS_DOCKER_IMAGE: "ubuntu:14.04"
     # RELAY_MESOS_DOCKER_NETWORK: "BRIDGE"
     RELAY_MESOS_FORCE_PULL_IMAGE: true
