--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,5 +80,6 @@ relay:
     RELAY_MESOS_ENVIRONMENT: "/etc/lsb-release"
     RELAY_MESOS_DOCKER_IMAGE: "ubuntu:14.04"
     # RELAY_MESOS_DOCKER_NETWORK: "BRIDGE"
+    # RELAY_MESOS_DOCKER_PARAMETERS: '{"rm": "true"}'
     RELAY_MESOS_FORCE_PULL_IMAGE: true
     RELAY_MESOS_URIS: "/etc/profile"
