--- a/docker-compose-slaves.yml
+++ b/docker-compose-slaves.yml
@@ -1,5 +1,5 @@
 slavebase:
-  image: breerly/mesos
+  image: mesosphere/mesos-slave:0.23.0-1.0.ubuntu1404
   privileged: true
   command: supervisord -n
   environment:
@@ -8,9 +8,12 @@ slavebase:
     MESOS_MASTER: "zk://zookeeper:2181/mesos"
     MESOS_LOG_DIR: "/var/log"
     MESOS_WORK_DIR: "/var/lib/mesos"
-  # volumes:
+    # MESOS_ATTRIBUTES: "public:true"
+  volumes:
+    - /sys/fs/cgroup:/sys/fs/cgroup
+    - /usr/local/bin/docker:/usr/bin/docker
+    - /var/run/docker.sock:/var/run/docker.sock
   #   - /tmp/mesoswork:/tmp/mesoswork
-  #   - /var/run/docker.sock:/var/run/docker.sock
   #   - /sys:/sys
   #   - /proc:/proc
   # --net=host \
