--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ slave1:
     - master
     - zookeeper
   environment:
-    MESOS_ATTRIBUTES: "slaves:12"
+    MESOS_ATTRIBUTES: "group:12;flag:red;"
   ports:
     - "5051:5051"
 
@@ -43,7 +43,7 @@ slave2:
     - master
     - zookeeper
   environment:
-    MESOS_ATTRIBUTES: "slaves:2"
+    MESOS_ATTRIBUTES: "group:12"
   ports:
     - "5052:5052"
 
@@ -94,4 +94,5 @@ relay:
     RELAY_MESOS_FORCE_PULL_IMAGE: true
     RELAY_MESOS_URIS: "/etc/profile"
     # RELAY_MESOS_ATTRIBUTE_MATCHES_ALL: "test_flag=no_slaves_have_this_flag"
-    RELAY_MESOS_ATTRIBUTE_MATCHES_ALL: "slaves=12"
+    RELAY_MESOS_ATTRIBUTE_MATCHES_ALL: "group=12.0"  # run on 2 of 3 slaves
+    # RELAY_MESOS_ATTRIBUTE_MATCHES_ALL: "flag=red,group=12.0"  # run on 1 slave
